<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/btn_star"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_my_data"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/my_data" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
